== 3.0.0-rc.2 - NOT RELEASED YET

* [FEATURE] Added onNodeInitialized event (#21)

== 3.0.0-rc.1 - February 3, 2013

NOTE: This is a release candidate. Please test this version and report any
issues found.

The treeTable plugin has been completely rewritten for this release. Please
review the documentation for changes in the way the plugin is used and the
options that are supported.

* [FEATURE] Added test suite to verify plugin behavior
* [ENHANCEMENT] Better adhere to jQuery plugin standards
* [ENHANCEMENT] Use 'data-' attributes for tree metadata (#48, #7)
* [ENHANCEMENT] Optimized performance of large trees (#41)
* [BUG] Do not pollute the jQuery namespace (#45)
* [REMOVED] Built-in persistence feature has been removed
* [REMOVED] IE6 support

== 2.3.1 - 18 January 2013
* [FEATURE] Keyboard accessibility (#27, #30)
* [FEATURE] Optionally persist expanded node state using $.cookie (requires
jquery-cookie plugin) (#19)
* [ENHANCEMENT] Passing options to $.cookie persistence (#31)
* [ENHANCEMENT] Use addClass('ui-helper-hidden') as suggested by whittet (#15)
* [ENHANCEMENT] Added manifest file for jQuery plugin registry
* [BUG] onNodeShow doesn't pass context (#28)
* [BUG] Fixed problems with multiple treeTables with identical rows on the
same page (#16)
* [BUG] Fixed parentOf() not using options.childPrefix (#16)
* [BUG] Prototype conflict (#14)
* [BUG] Wrong documentation for "initialState" (#11)
* [BUG] failed to reveal a node for a pitfall in parentOf (#8)

== 2.3.0 - 16 March 2010
* Added GPL-LICENSE. The jQuery treeTable plugin is now dual-licensed under both the MIT and GPLv2 license.
* Added reveal function to expand a tree to a given node.
* Verified compatibility with jQuery 1.4.2.

== 2.2.3 - 18 August 2009
* Further optimized performance by eliminating most calls to jQuery's css function

== 2.2.2 - 25 July 2009
* Optimized performance of tree initialization (with initialState is collapsed)