@@ -208,6 +208,12 @@ $("<b>#your_table_id</b>").treeTable();
         </thead>
         <tbody>
           <tr>
+            <td><tt>onInitialized</tt></td>
+            <td><tt>function</tt></td>
+            <td><tt>null</tt></td>
+            <td>Callback function fired when the tree has been initialized.</td>
+          </tr>
+          <tr>
             <td><tt>onNodeHide</tt></td>
             <td><tt>function</tt></td>
             <td><tt>null</tt></td>
